--- a/Mpolice/app/src/main/res/values/strings.xml
+++ b/Mpolice/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="parse_client_key">Uqp5HP8zWmKJB8S5N6EzhDzdL8rW6EVZ9emkEAeP</string>
     <string name="mpolice">M-POLICE</string>
     <string name="enter_plate_number">Enter plate number</string>
+    <string name="search_title">Search violations</string>
+
 </resources>
